--- a/src/resume.tex
+++ b/src/resume.tex
@@ -12,7 +12,8 @@ Mon stage de fin d'études à l'ISIMA avait pour but l'intégration d'une socié
 
 Tout d'abord, j'ai étudié les besoins du client, ainsi que l'ancienne solution, permettant de modéliser le modèle de données et la nouvelle application.
 
-Après le choix des technologies, j'ai développé une première version fonctionnelle de l'application. Celle-ci a permis au client d'énumérer les problèmes et proposer des améliorations ergonomiques et fonctionnelles.
+Après le choix des technologies, j'ai développé une première version fonctionnelle de l'application.
+Celle-ci a permis au client d'énumérer les problèmes et proposer des améliorations ergonomiques et fonctionnelles.
 
 Une fois l'application opérationnelle et son déploiement effectué, il ne restait plus qu'à importer les données de l'ancienne base de données pour permettre une transition efficace.
 \\
