--- a/Rapport.tex
+++ b/Rapport.tex
@@ -51,7 +51,7 @@
 
 
 %%%%%%%%%% Informations %%%%%%%%%%
-\title{Stage à Sopra Group}
+\title{Développement d'une application de recrutement}
 \author{\href{mailto:pinguet62@gmail.com}{Julien PINGUET}}
 \date{Avril-Septembre 2013}
 
