--- a/src/page_de_garde.tex
+++ b/src/page_de_garde.tex
@@ -40,7 +40,7 @@
 		\includegraphics[scale=0.07]{img/SopraGroupe_Logo.png}				\\
 		
 		% Nom
-		Sopra Groupe
+		Sopra Group
 		
 		\vspace*{0.5cm}
 		
